@@ -20,6 +20,7 @@ Unreleased Version 2.3.0-pre
  * Fix: Make start, login, invite and numerous other dialogs have proper title bars on macOS, rather than being those weird sheets. Thanks Axocrat for reporting.
  * Fix: Don't show duplicate full screen action in view menu on macOS.
  * Fix: Make window maximized when leaving full screen on macOS, rather than crumpling it down to a small size and messing up the docks arrangement.
+ * Feature: Allow closing modal dialogs on macOS using Command+Q. Thanks Axocrat for suggesting.
 
 2025-08-14 Version 2.3.0-beta.3
  * Fix: Allow putting labels on a blank brush thumbnail. Thanks hipofiz for reporting.
